refactor loading and saving of stats

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
             <a data-ng-click="reset()" class="btn btn-danger">Reset</a>
           </div>
           <div class="col-xs-10">
-            {{learner.stats()}}
+            {{learner.load()}}
           </div>
         </div>
       </div>
